--- a/Paginas/Album.html
+++ b/Paginas/Album.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="Nosotros.html">Nosotros</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Form.html">Pedido</a>
+                </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     productos
@@ -116,16 +119,24 @@
               <h6>Encuentranos en nuestras redes sociales!</h6>
             </div>
             <div>
+              <a href="https://www.facebook.com/" class="me-4 btn">
                 <i class="fab fa-facebook-f">
-                  <img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_16x16.png?_ga=2.96874711.937940511.1652046385-1500181311.1652046385">
+                <img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_16x16.png?_ga=2.96874711.937940511.1652046385-1500181311.1652046385">
                 </i>
+              </a>
+              <a href="https://twitter.com/?lang=es" class="me-4 btn">
                 <i class="fab fa-twitter"></i>
-                  <img src="https://cdn.exclaimer.com/Handbook%20Images/twitter-icon_16x16.png?_ga=2.36397032.937940511.1652046385-1500181311.1652046385">
+                <img src="https://cdn.exclaimer.com/Handbook%20Images/twitter-icon_16x16.png?_ga=2.36397032.937940511.1652046385-1500181311.1652046385">
+              </a>
+              <a href="https://www.youtube.com/watch?v=kHPm_AlxP7U" class="me-4 btn">
                 <i class="fab fa-google"></i>
-                  <img src="https://cdn.exclaimer.com/Handbook%20Images/youtube-icon_16x16.png">
+                <img src="https://cdn.exclaimer.com/Handbook%20Images/youtube-icon_16x16.png">
+              </a>
+              <a href="https://www.instagram.com/" class="me-4 btn">
                 <i class="fab fa-instagram">
                   <img src="https://cdn.exclaimer.com/Handbook%20Images/instagram-icon_16x16.png?_ga=2.36397032.937940511.1652046385-1500181311.1652046385">
                 </i>
+              </a>
             </div>
           </section>
           <section class="">
@@ -145,16 +156,16 @@
                     Grupos
                   </h6>
                   <p>
-                    BTS
+                    <a href="Album.html" class="btn">BTS</a>
                   </p>
                   <p>
-                    TXT
+                    <a href="Album.html" class="btn">TXT</a>
                   </p>
                   <p>
-                   TWICE
+                    <a href="Album.html" class="btn">TWICE</a>
                   </p>
                   <p>
-                   STRAY KIDS
+                    <a href="Album.html" class="btn">STRAY KIDS</a>
                   </p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="nov">
@@ -162,13 +173,13 @@
                     Novedades
                   </h6>
                   <p>
-                    Mamamoo
+                    <a href="Productos.html" class="btn">Mamamoo</a>
                   </p>
                   <p>
-                   Cherry Bullet
+                    <a href="Productos.html" class="btn">Cherry Bullet</a>
                   </p>
                   <p>
-                   Itzy
+                    <a href="Productos.html" class="btn">Itzy</a>
                   </p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
