--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="Paginas/Nosotros.html">Nosotros</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Paginas/Form.html">Pedido</a>
+                </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     productos
@@ -81,7 +84,7 @@
                   <p class="card-text">
                     Albums disponibles de los grupos de Hybe
                   </p>
-                  <a href="paginas/Album.html" class="btn btn-primary">Visitar</a>
+                  <a href="Paginas/Album.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
               <div class="card" id="card1">
@@ -91,7 +94,7 @@
                   <p class="card-text">
                     Albums disponibles de los grupos de JYP
                   </p>
-                  <a href="paginas/Album.html" class="btn btn-primary">Visitar</a>
+                  <a href="Paginas/Album.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
               <div class="card" id="card1">
@@ -101,7 +104,7 @@
                   <p class="card-text">
                     Albums disponibles de los grupos de SM
                   </p>
-                  <a href="paginas/Album.html" class="btn btn-primary">Visitar</a>
+                  <a href="Paginas/Album.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
               <div class="card" id="card1">
@@ -111,7 +114,7 @@
                   <p class="card-text">
                     Albums disponibles de los grupos de JY
                   </p>
-                  <a href="paginas/Album.html" class="btn btn-primary">Visitar</a>
+                  <a href="Paginas/Album.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
               <div class="card" id="card1">
@@ -121,7 +124,7 @@
                   <p class="card-text">
                     Albums disponibles de los grupos de Starship
                   </p>
-                  <a href="paginas/Album.html" class="btn btn-primary">Visitar</a>
+                  <a href="Paginas/Album.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
               <div class="card" id="card1">
@@ -131,7 +134,7 @@
                   <p class="card-text">
                     Albums disponibles de los grupos de CUBE
                   </p>
-                  <a href="paginas/Album.html" class="btn btn-primary">Visitar</a>
+                  <a href="Paginas/Album.html" class="btn btn-primary">Visitar</a>
                 </div>
               </div>
             </div>    
@@ -143,21 +146,27 @@
                  <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
                     <div class="image col">
                        <img src="Imagen/TWICE 4th BEST ALBUM 『TWICE4』-min.jpg" class="gallery-item" alt="gallery">
-                    </div>
+                       <a href="Paginas/Album.html" class="btn btn-light">TWICE</a>
+                      </div>
                     <div class="image col">
                        <img src="Imagen/tomorrow x together-min.jpg" class="gallery-item" alt="gallery">
+                       <a href="Paginas/Album.html" class="btn btn-light">TXT</a>
                     </div>
                     <div class="image col">
                        <img src="Imagen/TREASURE ICONS.jpg" class="gallery-item" alt="gallery">
-                    </div>
+                       <a href="Paginas/Album.html" class="btn btn-light">TREASURE</a>
+                      </div>
                     <div class="image col">
                        <img src="Imagen/✿.jpg" class="gallery-item" alt="gallery">
-                    </div>
+                       <a href="Paginas/Album.html" class="btn btn-light">NMIXX</a>
+                      </div>
                     <div class="image col">
                        <img src="Imagen/Love_yourself en TikTok-min.jpg" class="gallery-item" alt="gallery">
-                    </div>
+                       <a href="Paginas/Album.html" class="btn btn-light">BTS</a>
+                      </div>
                     <div class="image col">
                       <img src="Imagen/stray kids aesthetic-min.jpg">
+                      <a href="Paginas/Album.html" class="btn btn-light">STRAY KIDS</a>
                     </div>
                  </div>
               </div>
@@ -169,16 +178,24 @@
               <h6>Encuentranos en nuestras redes sociales!</h6>
             </div>
             <div>
+              <a href="https://www.facebook.com/" class="me-4 btn">
                 <i class="fab fa-facebook-f">
-                  <img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_16x16.png?_ga=2.96874711.937940511.1652046385-1500181311.1652046385">
+                <img src="https://cdn.exclaimer.com/Handbook%20Images/facebook-icon_16x16.png?_ga=2.96874711.937940511.1652046385-1500181311.1652046385">
                 </i>
+              </a>
+              <a href="https://twitter.com/?lang=es" class="me-4 btn">
                 <i class="fab fa-twitter"></i>
-                  <img src="https://cdn.exclaimer.com/Handbook%20Images/twitter-icon_16x16.png?_ga=2.36397032.937940511.1652046385-1500181311.1652046385">
+                <img src="https://cdn.exclaimer.com/Handbook%20Images/twitter-icon_16x16.png?_ga=2.36397032.937940511.1652046385-1500181311.1652046385">
+              </a>
+              <a href="https://www.youtube.com/watch?v=kHPm_AlxP7U" class="me-4 btn">
                 <i class="fab fa-google"></i>
-                  <img src="https://cdn.exclaimer.com/Handbook%20Images/youtube-icon_16x16.png">
+                <img src="https://cdn.exclaimer.com/Handbook%20Images/youtube-icon_16x16.png">
+              </a>
+              <a href="https://www.instagram.com/" class="me-4 btn">
                 <i class="fab fa-instagram">
                   <img src="https://cdn.exclaimer.com/Handbook%20Images/instagram-icon_16x16.png?_ga=2.36397032.937940511.1652046385-1500181311.1652046385">
                 </i>
+              </a>
             </div>
           </section>
           <section class="">
@@ -198,16 +215,16 @@
                     Grupos
                   </h6>
                   <p>
-                    BTS
+                    <a href="Paginas/Album.html" class="btn">BTS</a>
                   </p>
                   <p>
-                    TXT
+                    <a href="Paginas/Album.html" class="btn">TXT</a>
                   </p>
                   <p>
-                   TWICE
+                    <a href="Paginas/Album.html" class="btn">TWICE</a>
                   </p>
                   <p>
-                   STRAY KIDS
+                    <a href="Paginas/Album.html" class="btn">STRAY KIDS</a>
                   </p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="nov">
@@ -215,13 +232,13 @@
                     Novedades
                   </h6>
                   <p>
-                    Mamamoo
+                    <a href="Paginas/Productos.html" class="btn">Mamamoo</a>
                   </p>
                   <p>
-                   Cherry Bullet
+                    <a href="Paginas/Productos.html" class="btn">Cherry Bullet</a>
                   </p>
                   <p>
-                   Itzy
+                    <a href="Paginas/Productos.html" class="btn">Itzy</a>
                   </p>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -244,5 +261,6 @@
           </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    </body>
+        <script src="script.js"></script>
+      </body>
 </html>
