--- a/Paginas/Form.html
+++ b/Paginas/Form.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Condiciones de compra / Euphoria kPOP.store!!</title>
+        <title>Kpop Photocards / Euphoria kPOP.store!!</title>
         <meta name="description" content="Euphoria ofrece los mejores albums de kpop a precio accesible">
         <meta name="keywords" content="KPOP, ALBUMS, ASIA, MODA, BTS, ACCSESORIOS KPOP">
         <link href="https://fonts.googleapis.com/css2?family=Orelega+One&family=Pacifico&family=Poppins:wght@200;500&display=swap" rel="stylesheet">
@@ -13,9 +13,9 @@
     </head>
     <body class="d-flex flex-column min-vh-100">
         <header class="">
-            <h1 id="titulo3">Euphoria</h1>
+            <h1 id="titulo5">Euphoria</h1>
         </header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="navo4">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="navo3">
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -29,8 +29,8 @@
                   <a class="nav-link" href="Nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Form.html">Pedido</a>
-                </li>
+                    <a class="nav-link" href="Form.html">Pedido</a>
+                  </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     productos
@@ -46,75 +46,43 @@
           </div>
         </nav>
         <main>
-            <section>
-                <article>
-                    <div id="NosSec">    
-                        <h2>Terminos y Politicas</h2>
-                        <p>El cliente debe leer con atención todas nuestras politicas y condiciones
-                        antes de aceptar comprar alguno de nuestros productos para asi evitar cualquier
-                        inconveniente al momento de la entrega o pago en caso de no estar satisfecho 
-                        con el producto</p>
-                    </div>
-                </article>
-            </section>    
-            <div class="accordion" id="Accor">
-                <div class="accordion-item" id="accor1">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                        Productos
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-                    <div class="accordion-body">
-                        Los productos son mostrados como el proveedor establecio, no nos responsabilizamos
-                        de cualquier discontento con el producto sea por: calidad, apariencia, precio. Pero si
-                        este se encuentra en malas condiciones aceptaremos dar un reembolso inmediato en caso de
-                        que sea solicitado.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item" id="accor2">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                        Precios
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                    <div class="accordion-body">
-                        Los precios de los productos son administrados por la empresa y pueden variar dependiendo
-                        de sus impuestos correspodientes. Cualquier queja sera aceptada en nuesto buzon especializado
-                        en eso, pero seguiremos regularizando nuestros precios a lo que creemos conveniente
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item" id="accor3">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                        Envios
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                    <div class="accordion-body">
-                        Los envios no tendran ningun cargo extra si son dentro del pais, pero los impuestos de aduana
-                        seran incluidos dentro del precio del producto. Los envios son dentro de los 30 días posteriores
-                        a la compra y contara con total seguimiento de su producto durante estos.
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item" id="accor4">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                        Medios de Pago
-                      </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-                      <div class="accordion-body">
-                        Los datos a la hora del pago deben ser correctos y actualizados porque en caso de que no sea asi 
-                        la compra sera revocada y perdera su oportunidad de adquirir el producto.
+                <div class="container">
+                    <form id="idForm">
+                        <div class="mb-3">
+                          <label for="idNombre" class="form-label">Nombre</label>
+                          <input type="text" class="form-control" name="nombre" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="idPago" class="form-label">Pago</label>
+                            <input type="text" class="form-control"  name="pago">
+                          </div>
+                    <label for="">Album disponibles</label>
+                    <select size="1" id="seleccionHotel">
+                        <option value="1">Twice Between 1&2</option>
+                        <option value="2">Itzy Checkmate/ SpeciaL Edition</option>
+                        <option value="3">BTS: Proof</option>
+                        <option value="4">Ive / After Like</option>
+                        <option value="5">BlackPink Pink Venom</option>
+                        <option value="6">NCT = Regular</option>
+                        <option value="7">MAMAMMOO / AYA</option>
+                        <option value="8">TWICE Formula Of Love</option>
+                        <option value="9">NCT Dream = Glitch Mode</option>
+                        <option value="10">IVE Love Dive</option>
+                        <option value="11">BTS Map Of Soul 7</option>
+                        <option value="12">Stray Kids ODDINARY</option>
+                    </select>
+                    <div class="mb-3">
+                        <label for="idSeleccion" class="form-label">Escriba su album elegido</label>
+                        <input type="text" class="form-control" name="seleccion">
                       </div>
-                    </div>
-                  </div>
-              </div>
+
+                    <button type="submit" class="btn btn-success">Realizar Pedido</button>
+                </div><br><br>
+                
+                    <div class="container">
+                        <button id="botonTareas" class="btn btn-light">Mostrar Carrito</button><br><br>
+                        <div class="row" id="divTareas"></div>
+                    </div>         
         </main>
         <footer id="foot" class="mt-auto">
           <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" id="redsoc">
@@ -205,5 +173,6 @@
           </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="../js/script.js"></script>
     </body>
 </html>
