--- a/Paginas/Album.html
+++ b/Paginas/Album.html
@@ -45,74 +45,17 @@
             </div>
           </div>
         </nav>
-        <main>
-            <main id="Content">
-                <div class="Producto one">
-                    <img class="one" src="../Img/Icon/s-l300 (1).jpg" height="300" width="300">
-                    <div class="p">
-                        <h2>Txt Album - The Dream Chapter : Eternity</h2>
-                        <P>K + POP
-                        PRE-VENTA 18/5
-                        EL PRECIO DE LA PUBLICACION ES POR UNA SOLA VERSION
-                        VERSION A ELECCION DEL COMPRADOR
-                        - Version 1: Port (Violeta)
-                        - Version 2 : Starboard (Blanca)
-                        - 1CD
-                        - Photobook : 108p
-                        - Photocard A : Random 1p out of 6p (Port Ver./ Starboard Ver.)
-                        - Photocard B : Random 1p out of 5p (Port Ver./ Starboard Ver.)
-                        - Sticker : 1p (Port Ver./ Starboard Ver.)
-                        - TU illust card : 1p</P>
-                    </div>
-                </div>
-                <div class="Producto one">
-                    <img class="one" src="../Img/Icon/s-l400 (1).jpg" height="300" width="300">
-                    <div class="p">
-                        <h2>Bts-Be Deluxe Edition Boxset Edición Limitada 2020</h2>
-                        <P>K + POP
-                        BTS - BE (Boxset edición limitada)
-                        Esta edición contiene:
-                        *1 CD
-                        *1 Libro de fotos
-                        *1 Libro "Making Book"
-                        *1 póster con letras
-                        *8 tarjetas fotográficas
-                        *1 foto Polaroid
-                        *1 photoframe
-                        *7 postales
-                        *1 póster</P>
-                    </div>
-                </div>
-                <div class="Producto one">
-                    <img class="one" src="../Img/Icon/s-l300.jpg" height="300" width="300">
-                    <div class="p">
-                        <h2>TWICE [PAGE TWO] 2nd Mini Album Pink ver.</h2>
-                        <P>K + POP
-                        TWICE - [PAGE TWO] 2nd Mini Album Mint Version package incluye
-                        CD
-                        72p Photo Book
-                        Garland
-                        1p Lenticular 
-                        Card&Holder
-                        3p Photo Card
-                        Free Tacking Number</P>
-                    </div>
-                 </div>
-                <div class="Producto one">
-                    <img class="one" src="../Img/Icon/s-l300 (3).jpg" height="300" width="300">
-                    <div class="p">
-                        <h2>Stray Kids : I Am Who</h2>
-                        <P>K + POP
-                            I AM Version. 
-                            Release Date : 2018.08.07 Officially distributed Brand New & Factory Sealed CD.
-                             Will be Count Towards Hanteo and Gaon Chart. 
-                             CD + Photobook (Random 2nd Page, 1 out of 9)
-                             3 QR Photocards + Lyrics Poster (Random 1 out of 9) + GIFT 
-                             ( Photocard / mask )</P>
-                    </div>
-                </div>
-            </main>
-        </main>
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Kpop merch</a>
+            <input class="form-control me-2" type="text" placeholder="Buscar producto" id="inputProducto">
+            <button id="botonmostrar" class="btn btn-outline-secondary">Mostrar</button>
+        </div>
+      </nav>
+      <main>
+        <div id="caja">
+          <div class="row" id="divProductos"></div>
+        </div>
+      </main>
         <footer id="foot" class="mt-auto">
           <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" id="redsoc">
             <div class="me-5 d-none-block d-lg-block d-sm-block">
