--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -70,7 +70,7 @@
                         <p class="card-text">K-pop Mamamoo 5th mini álbum [Púrpura] Ver. CD+82p libro de fotos + álbum Sellado-</p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/154895331481?_ul=MX&chn=ps&norover=1&mkevt=1&mkrid=21551-241447-2056-0&mkcid=2&itemid=154895331481&targetid=293946777986&device=c&mktype=pla&googleloc=9041048&poi=&campaignid=15788532238&mkgroupid=135683994710&rlsatarget=pla-293946777986&abcId=&merchantid=415572351&gclid=Cj0KCQjw1N2TBhCOARIsAGVHQc5bJaKg6Geqdl1KuRpyFbhLbqL_blv62_9TY2r03NgL-h9iX-S85rQaAl1DEALw_wcB" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -87,7 +87,7 @@
                           Itzy - [Crazy in Love] el 1st Álbum CD + libro de fotos + + Polaroid Pre-orden + Regalo K-pop</p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/154570988045?epid=8049146690&hash=item23fd261a0d:g:E5MAAOSw-CthNsER" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Sin stock</small>
@@ -105,7 +105,7 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/125148023551?hash=item1d23674aff:g:2nQAAOSwAs5iCfLO" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -123,7 +123,7 @@
                           TWICE [PAGE TWO] 2nd Mini Album CD+Photo Book+Garland+4p Card+GIFT K-POP SEALED</p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/173320389097?hash=item285ab341e9:g:ENYAAOSwVWpa-4ab" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -142,7 +142,7 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/125295080574?epid=19046091758&hash=item1d2c2b347e:g:wgsAAOSwUDNibDQ1" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -159,7 +159,7 @@
                           BTS-MAP OF THE SOUL : 7 ALBUM - SELECT VER. 1 /2 /3 /4 KPOP SEALED NEW </p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/274198545767?epid=3050201387&hash=item3fd781c567:g:psoAAOSwTkVeRPkj" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -177,7 +177,7 @@
                           The Dream Chapter: ETERNITY [Port Version] by Tomorrow X Together (CD, 2020)</p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/293561863337?hash=item4459a68ca9:g:GKIAAOSwwxRep7EH" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -194,7 +194,7 @@
                           BTS MAP OF THE SOUL : PERSONA K-POP SEALED ALBUM</p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/153412664457?epid=5046075233&hash=item23b81b7c89:g:syQAAOSwjsZcsFCv" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
@@ -211,7 +211,7 @@
                           Cherry Bullet 1st Mini Album [Cherry Rush] CD+Booklet+P.Card+Film+Post card KPOP</p>
                         <div class="d-flex justify-content-between align-items-center-lg">
                           <div class="btn-group">
-                            <a href="https://www.ebay.com/itm/154287200544?epid=19046091568&hash=item23ec3bd920:g:B5cAAOSwsV9f-~Ru" class="btn btn-sm btn-outline-secondary">Comprar</a>
+                            <a href="Form.html" class="btn btn-sm btn-outline-secondary">Comprar</a>
                             <button type="button" class="btn btn-sm btn-outline-secondary">Revisar</button>
                           </div>
                           <small class="text-muted">Stock</small>
