--- a/Paginas/Form.html
+++ b/Paginas/Form.html
@@ -46,43 +46,46 @@
           </div>
         </nav>
         <main>
-                <div class="container">
-                    <form id="idForm">
-                        <div class="mb-3">
-                          <label for="idNombre" class="form-label">Nombre</label>
-                          <input type="text" class="form-control" name="nombre" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="idPago" class="form-label">Pago</label>
-                            <input type="text" class="form-control"  name="pago">
-                          </div>
-                    <label for="">Album disponibles</label>
-                    <select size="1" id="seleccionHotel">
-                        <option value="1">Twice Between 1&2</option>
-                        <option value="2">Itzy Checkmate/ SpeciaL Edition</option>
-                        <option value="3">BTS: Proof</option>
-                        <option value="4">Ive / After Like</option>
-                        <option value="5">BlackPink Pink Venom</option>
-                        <option value="6">NCT = Regular</option>
-                        <option value="7">MAMAMMOO / AYA</option>
-                        <option value="8">TWICE Formula Of Love</option>
-                        <option value="9">NCT Dream = Glitch Mode</option>
-                        <option value="10">IVE Love Dive</option>
-                        <option value="11">BTS Map Of Soul 7</option>
-                        <option value="12">Stray Kids ODDINARY</option>
-                    </select>
-                    <div class="mb-3">
-                        <label for="idSeleccion" class="form-label">Escriba su album elegido</label>
-                        <input type="text" class="form-control" name="seleccion">
-                      </div>
-
-                    <button type="submit" class="btn btn-success">Realizar Pedido</button>
-                </div><br><br>
-                
-                    <div class="container">
-                        <button id="botonTareas" class="btn btn-light">Mostrar Carrito</button><br><br>
-                        <div class="row" id="divTareas"></div>
-                    </div>         
+          <div class="container">
+            <h1>Quiero realizar un pedido!</h1>
+            <p>Al realizar un pedido con Euphoria, estarias aceptando todos los terminos y condiciones.</p>
+            <p>El cliente debe leer con atención todas nuestras politicas y condiciones
+              antes de aceptar comprar alguno de nuestros productos para asi evitar cualquier
+              inconveniente al momento de la entrega o pago en caso de no estar satisfecho 
+              con el producto</p>
+            <hr>
+            <h3>Introduzca sus datos para comprar con Nosotros!</h3>
+          <form id="form">
+            <div class="mb-3">
+              <label for="text" class="form-label">Nombre Completo</label>
+              <input type="text" class="form-control" id="nombre" required>
+            </div>
+            <div class="mb-3">
+              <label for="text" class="form-label">Localidad</label>
+              <input type="text" class="form-control" id="localidad" required>
+            </div>
+            <h4>utilize el codigo del producto</h4>
+            <div class="input-group mb-3">
+              <span class="input-group-text">Codigo</span>
+              <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)" id="codigo" required>          
+            </div>
+            <div class="mb-3">
+              <label for="number" class="form-label">Edad</label>
+              <input type="number" class="form-control w-25" id="edad" required>
+            </div>       
+            <div class="mb-3">
+              <label for="number" class="form-label">DNI</label>
+              <input type="number" class="form-control w-25" id="DNi" required>
+            </div>      
+              <button type="submit" class="btn btn-success">Confirmar</button>
+            </form>
+      </div>
+      <hr>
+      <footer>
+      <div class="container" id="uno">
+          <button id="mostrar" class="btn btn-light">Datos del comprador</button><br><br>
+          <div class="row" id="divProductos"></div>
+      </div>       
         </main>
         <footer id="foot" class="mt-auto">
           <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" id="redsoc">
@@ -172,7 +175,8 @@
             © 2022 Copyright: Maru
           </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.29/dist/sweetalert2.all.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-        <script src="../js/script.js"></script>
+        <script src="../js/pedido.js"></script>
     </body>
 </html>
