--- a/Paginas/Photocard.html
+++ b/Paginas/Photocard.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Orelega+One&family=Pacifico&family=Poppins:wght@200;500&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="../Css/cssPt.css">
         <link rel="stylesheet" href="../Css/css.css">
     </head>
     <body class="d-flex flex-column min-vh-100">
@@ -44,47 +45,15 @@
               </ul>
             </div>
           </div>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Twice Collector</a>
+              <input class="form-control me-2" type="text" placeholder="Buscar producto" id="inputProducto">
+              <button id="botonProductos" class="btn btn-outline-secondary">Mostrar Productos</button>
+          </div>
         </nav>
         <main>
-          <div class="card" id="card5">
-            <img src="https://d1w8cc2yygc27j.cloudfront.net/-86143167580950507/-6386372844070251492.jpg" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">TWICE 7th Mini album Fancy You Photocard Photo Card - Sana + FreePhoto +Tracking</h5>
-              <p class="card-text">
-                Buy: $7.90
-              </p>
-              <a href="https://www.collectors.com/entertainment-item/twice-7th-mini-album-fancy-you-photocard-photo-card-sana-fr/-86143167580950507" class="btn btn-primary">Comprar</a>
-            </div>
-          </div>
-          <div class="card" id="card5">
-            <img src="https://d9nvuahg4xykp.cloudfront.net/-3318375353923979402/-7786187186758502257.jpg" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">TWICE 7th Mini album Fancy You Photocard Photo Card - Mina +FreePhoto+Tracking</h5>
-              <p class="card-text">
-                Buy: $6.90
-              </p>
-              <a href="https://www.collectors.com/entertainment-item/twice-7th-mini-album-fancy-you-photocard-photo-card-mina-fr/-3318375353923979402" class="btn btn-primary">Comprar</a>
-            </div>
-          </div>
-          <div class="card" id="card5">
-            <img src="https://d1w8cc2yygc27j.cloudfront.net/-8982815905473864937/1164912841741859890.jpg" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">TWICE 7th Mini album Fancy You Photocard Photo Card - Dahyun +FreePhoto+Tracking</h5>
-              <p class="card-text">
-                Buy: $6.90
-              </p>
-              <a href="https://www.collectors.com/entertainment-item/twice-7th-mini-album-fancy-you-photocard-photo-card-dahyun/-8982815905473864937" class="btn btn-primary">Comprar</a>
-            </div>
-          </div>
-          <div class="card" id="card5">
-            <img src="https://d9nvuahg4xykp.cloudfront.net/3047422953162936642/4538030071763010730.jpg" class="card-img-top" />
-            <div class="card-body">
-              <h5 class="card-title">TWICE 7th Mini album Fancy You Photocard Photo Card - Nayeon +FreePhoto+Tracking</h5>
-              <p class="card-text">
-                Buy: $6.99
-              </p>
-              <a href="https://www.collectors.com/entertainment-item/twice-7th-mini-album-fancy-you-photocard-photo-card-nayeon/3047422953162936642" class="btn btn-primary">Comprar</a>
-            </div>
+          <div id="caja">
+            <div class="row" id="divProductos"></div>
           </div>
         </main>
         <footer id="foot" class="mt-auto">
@@ -176,5 +145,6 @@
           </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    </body>
+        <script src="../js/productos.js"></script>
+      </body>
 </html>
